# zhotload

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  version.h.in
cmake/: android.toolchain.cmake  ios.toolchain.cmake
tests/: CMakeLists.txt  test_ctx.c  test_dl_abstraction.c  test_download.c  test_harness.h  test_hotload_apply.c  test_ingest.c  test_local_watch.c  test_platform_serving.c  test_signed_update.c  test_update_check.c  test_version.c
tests/fixtures/: fixture_bad.c  fixture_v1.c  fixture_v2.c
zhl/: CMakeLists.txt
zhl/include/zhl/: zhl.h
zhl/src/: zhl_ctx.c  zhl_dl.h  zhl_dl_posix.c  zhl_dl_win32.c  zhl_hotload.c  zhl_http.h  zhl_http_android.c  zhl_http_apple.m  zhl_http_curl.c  zhl_http_zcio.c  zhl_internal.h  zhl_update.c  zhl_version.c
zhs/: CMakeLists.txt  README.md
zhs/src/: common.c  common.h  local_watch.c  local_watch.h  main.c
